hphp/hack/test/typecheck/global_const14.php
<?hh

class A {}

const A X = new A();
